# recipe

./: .gitignore  README.md  app.js  database.py  deployment.md  init_db.py  main.py  model.py  pyproject.toml  recipe_manager.py  requirements.txt
data/: recipes.csv
models/: User.js
recipe-recommender/: package-lock.json  package.json
recipe-recommender/public/: index.html
recipe-recommender/src/: App.js  translations.js
recipe-recommender/src/components/: Button.js  Card.js  Input.js
routes/: auth.js
static/: User.js  auth.js  index.html  script.js  signup.js  style.css  translations.js
