[tool.poetry]
name = "repl-nix-ingredientsage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
scikit-learn = "^1.5.1"
streamlit-extras = "^0.4.7"
openai = "^1.44.0"
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
